--- a/themes/tokyo-night/noctalia/plugins/catwalk/i18n/de.json
+++ b/themes/tokyo-night/noctalia/plugins/catwalk/i18n/de.json
@@ -5,6 +5,10 @@
   },
   "settings": {
     "currentThreshold": "Aktuelle Schwelle: {value}%",
+    "hideBackground": {
+      "description": "Verstecke den Hintergrund des Desktop-Widgets",
+      "label": "Hintergrund ausblenden"
+    },
     "minimumThreshold": {
       "description": "Die CPU-Auslastung muss über diesem Prozentsatz liegen, damit die Katze zu laufen beginnt",
       "label": "Minimale CPU-Schwelle"
