--- a/themes/tokyo-night/noctalia/plugins/catwalk/i18n/pt.json
+++ b/themes/tokyo-night/noctalia/plugins/catwalk/i18n/pt.json
@@ -5,6 +5,10 @@
   },
   "settings": {
     "currentThreshold": "Limite atual: {value}%",
+    "hideBackground": {
+      "description": "Ocultar o fundo do widget da área de trabalho",
+      "label": "Ocultar fundo"
+    },
     "minimumThreshold": {
       "description": "O uso da CPU deve estar acima desta porcentagem para o gato começar a correr",
       "label": "Limite mínimo de CPU"
