--- a/themes/tokyo-night/noctalia/plugins/catwalk/i18n/en.json
+++ b/themes/tokyo-night/noctalia/plugins/catwalk/i18n/en.json
@@ -5,6 +5,10 @@
   },
   "settings": {
     "currentThreshold": "Current threshold: {value}%",
+    "hideBackground": {
+      "description": "Hide the background of the desktop widget",
+      "label": "Hide Background"
+    },
     "minimumThreshold": {
       "description": "CPU usage must be above this percentage for the cat to start running",
       "label": "Minimum CPU Threshold"
