--- a/themes/tokyo-night/noctalia/plugins/catwalk/i18n/es.json
+++ b/themes/tokyo-night/noctalia/plugins/catwalk/i18n/es.json
@@ -5,6 +5,10 @@
   },
   "settings": {
     "currentThreshold": "Umbral actual: {value}%",
+    "hideBackground": {
+      "description": "Ocultar el fondo del widget de escritorio",
+      "label": "Ocultar fondo"
+    },
     "minimumThreshold": {
       "description": "El uso de CPU debe estar por encima de este porcentaje para que el gato empiece a correr",
       "label": "Umbral mínimo de CPU"
