--- a/themes/tokyo-night/noctalia/plugins/catwalk/i18n/fr.json
+++ b/themes/tokyo-night/noctalia/plugins/catwalk/i18n/fr.json
@@ -5,6 +5,10 @@
   },
   "settings": {
     "currentThreshold": "Seuil actuel : {value}%",
+    "hideBackground": {
+      "description": "Masquer l'arrière-plan du widget de bureau",
+      "label": "Masquer l'arrière-plan"
+    },
     "minimumThreshold": {
       "description": "L'utilisation du CPU doit être supérieure à ce pourcentage pour que le chat commence à courir",
       "label": "Seuil minimum CPU"
