--- a/themes/tokyo-night/noctalia/plugins/catwalk/i18n/it.json
+++ b/themes/tokyo-night/noctalia/plugins/catwalk/i18n/it.json
@@ -5,6 +5,10 @@
   },
   "settings": {
     "currentThreshold": "Soglia attuale: {value}%",
+    "hideBackground": {
+      "description": "Nascondi lo sfondo del widget desktop",
+      "label": "Nascondi sfondo"
+    },
     "minimumThreshold": {
       "description": "L'utilizzo della CPU deve essere superiore a questa percentuale affinché il gatto inizi a correre",
       "label": "Soglia minima CPU"
