--- a/themes/tokyo-night/noctalia/plugins/catwalk/i18n/ja.json
+++ b/themes/tokyo-night/noctalia/plugins/catwalk/i18n/ja.json
@@ -5,6 +5,10 @@
   },
   "settings": {
     "currentThreshold": "現在のしきい値: {value}%",
+    "hideBackground": {
+      "description": "デスクトップウィジェットの背景を隠す",
+      "label": "背景を隠す"
+    },
     "minimumThreshold": {
       "description": "猫が走り始めるにはCPU使用率がこの割合を超えている必要があります",
       "label": "最小CPUしきい値"
