--- a/themes/tokyo-night/noctalia/plugins/catwalk/i18n/nl.json
+++ b/themes/tokyo-night/noctalia/plugins/catwalk/i18n/nl.json
@@ -5,6 +5,10 @@
   },
   "settings": {
     "currentThreshold": "Huidige drempelwaarde: {value}%",
+    "hideBackground": {
+      "description": "Verberg de achtergrond van de bureaubladwidget",
+      "label": "Achtergrond verbergen"
+    },
     "minimumThreshold": {
       "description": "CPU-gebruik moet boven dit percentage liggen voordat de kat begint te rennen.",
       "label": "Minimale CPU-drempel"
