--- a/themes/tokyo-night/noctalia/plugins/catwalk/i18n/ru.json
+++ b/themes/tokyo-night/noctalia/plugins/catwalk/i18n/ru.json
@@ -5,6 +5,10 @@
   },
   "settings": {
     "currentThreshold": "Текущий порог: {value}%",
+    "hideBackground": {
+      "description": "Скрыть фон виджета рабочего стола",
+      "label": "Скрыть фон"
+    },
     "minimumThreshold": {
       "description": "Использование CPU должно быть выше этого процента, чтобы кот начал бежать",
       "label": "Минимальный порог CPU"
