--- a/themes/tokyo-night/noctalia/plugins/catwalk/i18n/tr.json
+++ b/themes/tokyo-night/noctalia/plugins/catwalk/i18n/tr.json
@@ -5,6 +5,10 @@
   },
   "settings": {
     "currentThreshold": "Mevcut eşik: {value}%",
+    "hideBackground": {
+      "description": "Masaüstü bileşeninin arka planını gizle",
+      "label": "Arka planı gizle"
+    },
     "minimumThreshold": {
       "description": "CPU kullanımı, kedinin koşmaya başlaması için bu yüzdeden yüksek olmalıdır.",
       "label": "Minimum CPU Eşiği"
