--- a/themes/tokyo-night/noctalia/plugins/catwalk/i18n/uk-UA.json
+++ b/themes/tokyo-night/noctalia/plugins/catwalk/i18n/uk-UA.json
@@ -5,6 +5,10 @@
   },
   "settings": {
     "currentThreshold": "Поточний поріг: {value}%",
+    "hideBackground": {
+      "description": "Приховати фон віджета робочого столу",
+      "label": "Приховати фон"
+    },
     "minimumThreshold": {
       "description": "Використання ЦП має бути вище цього відсотка, щоб кіт почав бігати.",
       "label": "Мінімальний поріг ЦП"
