--- a/themes/tokyo-night/noctalia/plugins/mini-docker/i18n/ja.json
+++ b/themes/tokyo-night/noctalia/plugins/mini-docker/i18n/ja.json
@@ -1,12 +1,8 @@
 {
-  "intervals": {
-    "10_seconds": "10秒",
-    "1_second": "1秒",
-    "30_seconds": "30秒",
-    "5_seconds": "5秒"
-  },
   "settings": {
     "current_value": "選択済み: {value} ms",
+    "default_network_description": "イメージの実行時に使用するデフォルトネットワーク",
+    "default_network_label": "デフォルトネットワーク",
     "general": "一般",
     "refresh_interval_description": "プラグインがコンテナの状態をチェックする頻度",
     "refresh_interval_label": "更新間隔",
@@ -14,15 +10,7 @@
   },
   "tooltip": {
     "docker_not_available": "Dockerが利用できません",
+    "image_already_running": "イメージはすでにコンテナ内で実行されています。",
     "running_containers": "実行中のコンテナ: %1"
-  },
-  "ui": {
-    "containers": "コンテナ",
-    "prune": "整理",
-    "refresh": "更新",
-    "remove": "削除",
-    "start": "開始",
-    "stop": "停止",
-    "volumes": "ボリューム"
   }
 }
