--- a/themes/tokyo-night/noctalia/plugins/mini-docker/i18n/tr.json
+++ b/themes/tokyo-night/noctalia/plugins/mini-docker/i18n/tr.json
@@ -1,12 +1,8 @@
 {
-  "intervals": {
-    "10_seconds": "10 saniye",
-    "1_second": "1 saniye",
-    "30_seconds": "30 saniye",
-    "5_seconds": "5 saniye"
-  },
   "settings": {
     "current_value": "Seçildi: {value} ms",
+    "default_network_description": "Görüntüleri çalıştırırken kullanılacak varsayılan ağ",
+    "default_network_label": "Varsayılan Ağ",
     "general": "Genel",
     "refresh_interval_description": "Eklenti konteyner durumunu ne sıklıkta kontrol eder",
     "refresh_interval_label": "Yenileme Aralığı",
@@ -14,15 +10,7 @@
   },
   "tooltip": {
     "docker_not_available": "Docker mevcut değil",
+    "image_already_running": "Görüntü zaten bir konteynerde çalışıyor.",
     "running_containers": "Çalışan konteynerler: %1"
-  },
-  "ui": {
-    "containers": "Konteynerler",
-    "prune": "Temizle",
-    "refresh": "Yenile",
-    "remove": "Kaldır",
-    "start": "Başlat",
-    "stop": "Durdur",
-    "volumes": "Birimler"
   }
 }
