--- a/themes/tokyo-night/noctalia/plugins/mini-docker/i18n/zh-CN.json
+++ b/themes/tokyo-night/noctalia/plugins/mini-docker/i18n/zh-CN.json
@@ -1,12 +1,8 @@
 {
-  "intervals": {
-    "10_seconds": "10 秒",
-    "1_second": "1 秒",
-    "30_seconds": "30 秒",
-    "5_seconds": "5 秒"
-  },
   "settings": {
     "current_value": "已选择: {value} 毫秒",
+    "default_network_description": "运行镜像时使用的默认网络",
+    "default_network_label": "默认网络",
     "general": "通用",
     "refresh_interval_description": "插件检查容器状态的频率",
     "refresh_interval_label": "刷新间隔",
@@ -14,15 +10,7 @@
   },
   "tooltip": {
     "docker_not_available": "Docker 不可用",
+    "image_already_running": "镜像已经在容器中运行。",
     "running_containers": "运行中的容器: %1"
-  },
-  "ui": {
-    "containers": "容器",
-    "prune": "清理",
-    "refresh": "刷新",
-    "remove": "删除",
-    "start": "启动",
-    "stop": "停止",
-    "volumes": "卷"
   }
 }
